<resources>
    <string name="project_name">Project2Music</string>
    <string name="app_name">DoReMi</string>
    <string name="tag_line">Everyday I\'m Shufflin\'</string>
    <string name="get_started">Get Started</string>
    <string name="home_page">Home</string>
    <string name="navigate_to">Navigate to</string>
    <string name="artists">Artists</string>
    <string name="albums">Albums</string>
    <string name="playlists">Playlists</string>
    <string name="buy_music">Buy Music</string>
    <string name="title_activity_login">Sign in</string>
    <string name="settings">Settings</string>
    <string name="songs">Songs</string>
    <string name="budapest">Budapest</string>
    <string name="george_ezra">George Ezra</string>
    <string name="cake_by_ocean">Cake By The Ocean</string>
    <string name="dnce">DNCE</string>
    <string name="cheap_thrills">Cheap Thrills</string>
    <string name="sia">Sia</string>
    <string name="to_the_moon">Fly Me To The Moon</string>
    <string name="frank_sinatra">Frank Sinatra</string>
    <string name="elvis">Elvis Presley</string>
    <string name="hound_dog">Hound Dog</string>
    <string name="say_i_love_you">I Just Called To Say I Love You</string>
    <string name="stevie_wonder">Stevie Wonder</string>
    <string name="light_it_up">Light It Up</string>
    <string name="major_lazer">Major Lazer</string>
    <string name="connie">Connie Francis</string>
    <string name="lipstick_on_collar">Lipstick On Your Collar</string>
    <string name="big_bang">Big Bang</string>
    <string name="loser">Loser</string>
    <string name="love_me_right">Love Me Right</string>
    <string name="exo">EXO</string>
    <string name="lucky_lips">Lucky Lips</string>
    <string name="cliff_richards">Cliff Richards</string>
    <string name="mansae">Mansae</string>
    <string name="seventeen">Seventeen</string>
    <string name="que_sera">Que Sera Sera</string>
    <string name="doris">Doris Day</string>
    <string name="questions">Questions</string>
    <string name="chris_brown">Chris Brown</string>
    <string name="jason_derulo">Jason Derulo</string>
    <string name="swalla">Swalla</string>
    <string name="eve">The Eve</string>
    <string name="twice">Twice</string>
    <string name="tt">TT</string>
    <string name="trumpets">Trumpets</string>
    <string name="sean_paul">Sean Paul</string>
    <string name="optimized_playback">Optimized Playback</string>
    <string name="data_saving">Data Saving Mode</string>
    <string name="shake_to_shuffle">Shake to Shuffle</string>
    <string name="limit_vol">Limit Volume</string>
    <string name="back_button">Back Button</string>
    <string name="k_pop">K-Pop</string>
    <string name="favorites">Favourites</string>
    <string name="classics">Classics</string>
    <string name="image">Album/Artist Image</string>
    <string name="home_button">Home Button</string>
    <string name="payment">Payment Activity</string>
    <string name="step1_pay">Step 1: open the build.gradle file in the app module and add the following to the dependencies block:</string>
    <string name="using_API">Using an API to make payment</string>
    <string name="step2_pay">dependencies {\ncompile \'com.google.android.gms:play-services:11.4.2\'</string>
    <string name="step3_pay">compile \'com.google.android.gms:play-services-wallet:11.4.0\'</string>
    <string name="step4_pay">compile \'com.android.support:support-v4:24.1.1\'</string>
    <string name="step5_pay">compile \'com.android.support:appcompat-v7:24.1.1\'}</string>
    <string name="step6_pay"><![CDATA[Step 2: To enable Pay with Google in your app, you need to add the following Google Payment API meta-data to the <application> tag of your AndroidManifest.xml:]]></string>
    <string name="pay_steps">PaymentSteps</string>
    <string name="play">PLAY</string>
    <string name="pause">PAUSE</string>
    <string name="stop">STOP</string>
    <string name="home_purpose">This activity can be used to navigate to other screens.</string>
    <string name="songs_purpose">This activity shows a list of songs. Clicking on a song will make it play.</string>
    <string name="artists_purpose">This acitivity lists the artists whose songs are in the player.</string>
    <string name="playlists_purpose">This activity lists the playlists. Clicking on a tab will show the songs in the playlist.</string>
    <string name="settings_purpose">This activity shows the settings available in the player.</string>
    <string name="payment_purpose">This activity explains how an API can be used to make payment</string>
    <string name="albums_purpose">This activity lists the albums in the player.</string>
</resources>
