<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fillViewport="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/black"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:contentDescription="@string/back_button"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/back_button" />

            <TextView
                style="@style/Headers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/playlists"
                android:textColor="#FF4081" />

            <ImageView
                android:id="@+id/iv_settings"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="10dp"
                android:contentDescription="@string/settings"
                android:padding="15dp"
                android:scaleType="fitCenter"
                android:src="@drawable/settings" />

        </RelativeLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/playlists_purpose"
            android:textColor="@android:color/white"
            android:layout_margin="10dp"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tv_classics"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#D1C4E9"
            android:padding="15dp"
            android:text="@string/classics"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_classic1"
            style="@style/PlaylistText"
            android:background="#EF9A9A"
            android:text="@string/to_the_moon"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_classic2"
            style="@style/PlaylistText"
            android:background="#EF9A9A"
            android:text="@string/hound_dog"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_classic3"
            style="@style/PlaylistText"
            android:background="#EF9A9A"
            android:text="@string/say_i_love_you"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_classic4"
            style="@style/PlaylistText"
            android:background="#EF9A9A"
            android:text="@string/lipstick_on_collar"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_classic5"
            style="@style/PlaylistText"
            android:background="#EF9A9A"
            android:text="@string/lucky_lips"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_classic6"
            style="@style/PlaylistText"
            android:background="#EF9A9A"
            android:text="@string/que_sera"
            android:visibility="gone" />


        <TextView
            android:id="@+id/tv_favourites"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#B39DDB"
            android:padding="15dp"
            android:text="@string/favorites"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_fave1"
            style="@style/PlaylistText"
            android:background="#F48FB1"
            android:text="@string/love_me_right"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_fave2"
            style="@style/PlaylistText"
            android:background="#F48FB1"
            android:text="@string/mansae"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_fave3"
            style="@style/PlaylistText"
            android:background="#F48FB1"
            android:text="@string/questions"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_fave4"
            style="@style/PlaylistText"
            android:background="#F48FB1"
            android:text="@string/swalla"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_fave5"
            style="@style/PlaylistText"
            android:background="#F48FB1"
            android:text="@string/trumpets"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_kpop"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:background="#9575CD"
            android:padding="15dp"
            android:text="@string/k_pop"
            android:textColor="@android:color/black"
            android:textSize="20sp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tv_kpop1"
            style="@style/PlaylistText"
            android:background="#EC407A"
            android:text="@string/loser"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_kpop2"
            style="@style/PlaylistText"
            android:background="#EC407A"
            android:text="@string/love_me_right"
            android:visibility="gone" />

        <TextView
            style="@style/PlaylistText"
            android:background="#EC407A"
            android:text="@string/mansae"
            android:visibility="gone" />

        <TextView
            android:id="@+id/tv_kpop3"
            style="@style/PlaylistText"
            android:background="#EC407A"
            android:text="@string/tt"
            android:visibility="gone" />

    </LinearLayout>
</ScrollView>
