<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/iv_back_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/back_button"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/back_button" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_weight="2"
                android:gravity="center"
                android:text="@string/navigate_to"
                android:textColor="@android:color/white"
                android:textSize="35sp" />

            <ImageView
                android:id="@+id/iv_settings"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:layout_weight="1"
                android:contentDescription="@string/settings"
                android:padding="10dp"
                android:scaleType="fitCenter"
                android:src="@drawable/settings" />
        </LinearLayout>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:text="@string/home_purpose"
            android:textColor="@android:color/white"
            android:textSize="20sp" />

        <Button
            android:id="@+id/bv_songs"
            style="@style/HomeButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#FFE082"
            android:gravity="center"
            android:text="@string/songs"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/bv_artists"
            style="@style/HomeButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#F48FB1"
            android:gravity="center"
            android:text="@string/artists"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/bv_albums"
            style="@style/HomeButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#F06292"
            android:gravity="center"
            android:text="@string/albums"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/bv_playlists"
            style="@style/HomeButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:background="#AB47BC"
            android:gravity="center"
            android:text="@string/playlists"
            android:textColor="@android:color/black" />

        <Button
            android:id="@+id/bv_buy_music"
            style="@style/HomeButtons"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:background="#7B1FA2"
            android:gravity="center"
            android:text="@string/buy_music"
            android:textColor="@android:color/black" />
    </LinearLayout>
</ScrollView>