<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/back_button"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back_button" />

        <TextView
            style="@style/Headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/songs"
            android:textColor="#D81B60" />

        <ImageView
            android:id="@+id/iv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/settings"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/settings" />

    </RelativeLayout>


    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginTop="7dp"
        android:background="@color/colorAccent" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/songs_purpose"
        android:textColor="@android:color/white"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <LinearLayout
        android:id="@+id/ll_basics"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_margin="10dp"
        android:visibility="gone"
        >

        <Button
            android:onClick="play"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_marginRight="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/play"/>

        <Button
            android:onClick="pause"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_marginRight="10dp"
            android:text="@string/pause"/>

        <Button
            android:onClick="stop"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:backgroundTint="@android:color/darker_gray"
            android:layout_marginRight="10dp"
            android:text="@string/stop"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="@color/colorAccent" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black"
        android:orientation="vertical"
        android:padding="16dp">
    </ListView>


</LinearLayout>

