<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_back_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:contentDescription="@string/back_button"
            android:padding="10dp"
            android:scaleType="fitCenter"
            android:src="@drawable/back_button"/>

        <TextView
            style="@style/Headers"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/artists"
            android:textColor="#64B5F6"/>

        <ImageView
            android:id="@+id/iv_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/settings"
            android:padding="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/settings"/>
    </RelativeLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/artists_purpose"
        android:textColor="@android:color/white"
        android:layout_margin="10dp"
        android:textSize="20sp" />

    <ListView
        android:id="@+id/list2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/black">
    </ListView>

</LinearLayout>