<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/black"
    android:fillViewport="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_DoReMi"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:layout_marginTop="10dp"
            android:fontFamily="Monospace"
            android:gravity="center"
            android:text="@string/app_name"
            android:textColor="#EC407A"
            android:textSize="55sp"
            android:textStyle="bold"/>

        <ImageView
            android:id="@+id/iv_logo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_gravity="center"
            android:layout_weight="2.5"
            android:contentDescription="@string/app_name"
            android:paddingEnd="15dp"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingStart="15dp"
            android:scaleType="fitCenter"
            android:src="@drawable/musiclogo1"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:gravity="center"
            android:paddingBottom="25dp"
            android:text="@string/tag_line"
            android:textColor="#4CAF50"
            android:textSize="30sp"/>

        <Button
            android:id="@+id/bv_get_started"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="25dp"
            android:background="@android:color/white"
            android:padding="10dp"
            android:text="@string/get_started"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>
    </LinearLayout>
</ScrollView>
